@@ -19,7 +19,10 @@ function dkan_harvest_drush_command() {
       'The source machine name to run the harvest caching on',
     ),
     'options' => array(
-      'skip-hash' => 'Skip hash checking and update all the datasets available in the source.',
+      'skiphash' => 'Skip hash checking and update all the datasets available in the source.',
+      'limit' => 'Limit on the length of each migration. Check migrate doc for more about this option.',
+      'instrument' => 'Capture performance information (timer, memory, or all). Check migrate doc for more about this option.',
+      'idlist' => 'A comma delimited list of ids to import or rollback. Check migrate doc for more about this option.',
     ),
     'drupal dependencies' => array('dkan_harvest'),
   );
@@ -45,7 +48,10 @@ function dkan_harvest_drush_command() {
       'source_machine_name' => 'The source machine name to run the harvest migration on. If not provided run the harvest ',
     ),
     'options' => array(
-      'skip-hash' => 'Skip hash checking and update all the datasets available in the source.',
+      'skiphash' => 'Skip hash checking and update all the datasets available in the source.',
+      'limit' => 'Limit on the length of each migration. Check migrate doc for more about this option.',
+      'instrument' => 'Capture performance information (timer, memory, or all). Check migrate doc for more about this option.',
+      'idlist' => 'A comma delimited list of ids to import or rollback. Check migrate doc for more about this option.',
     ),
     'drupal dependencies' => array('dkan_harvest'),
   );
@@ -57,6 +63,11 @@ function dkan_harvest_drush_command() {
     'callback' => 'dkan_harvest_drush_command_rollback',
     'arguments' => array(
       'source_machine_name' => 'The source machine name to run the harvest migration on. If not provided run the harvest ',
+    ),
+    'options' => array(
+      'limit' => 'Limit on the length of each migration. Check migrate doc for more about this option.',
+      'instrument' => 'Capture performance information (timer, memory, or all). Check migrate doc for more about this option.',
+      'idlist' => 'A comma delimited list of ids to import or rollback. Check migrate doc for more about this option.',
     ),
     'drupal dependencies' => array('dkan_harvest'),
   );
@@ -128,25 +139,42 @@ function dkan_harvest_drush_command_cache($source_machine_name) {
  *        Source machine name to migrate.
  */
 function dkan_harvest_drush_command_migrate($source_machine_name) {
-  // Gather harvest migration options.
-  $options = array(
-    // TODO add supported default migrate import options.
-    'dkan_harvest_skip_hash' => drush_get_option('skip-hash', FALSE),
-  );
+  $supported_options = array('limit', 'skiphash', 'instrument', 'idlist');
+  $options = array();
 
+  // Gather harvest migration options. If parsing the arguments fails just relay
+  // on the parsing callback to oouput an appropriate message and stop.
+  $option_parsed = dkan_harvest_get_options($options, $supported_options);
+  if (!$option_parsed) {
+    return;
+  }
+
+  $sources = array();
   if (isset($source_machine_name)) {
-    if ($source = new HarvestSource($source_machine_name)) {
-      drush_log("Running the harvest migration on " . $source_machine_name, 'notice');
-      dkan_harvest_migrate_sources(array($source), $options);
+    $source = dkan_harvest_get_harvestsource($source_machine_name);
+
+    if (!$source) {
+      return FALSE;
     }
-    else {
-      drush_log("No source with machine name " . $source_machine_name . " found.", 'error');
-    }
+
+    drush_log("Running the harvest migration on " . $source_machine_name, 'notice');
+    $sources[] = $source;
   }
   else {
     drush_log("Running the harvest migration on all the available sources.", 'notice');
     $sources = dkan_harvest_sources_definition();
-    dkan_harvest_migrate_sources($sources);
+  }
+
+  dkan_harvest_migrate_sources($sources, $options);
+
+  // Print instrument info if set.
+  global $_migrate_track_memory, $_migrate_track_timer;
+  if ($_migrate_track_memory) {
+    drush_migrate_print_memory();
+  }
+
+  if ($_migrate_track_timer && !drush_get_context('DRUSH_DEBUG')) {
+    drush_print_timers();
   }
 }
 
@@ -157,34 +185,37 @@ function dkan_harvest_drush_command_migrate($source_machine_name) {
  *        Source machine name to migrate.
  */
 function dkan_harvest_drush_command_rollback($source_machine_name) {
+  $options = array();
+  $supported_options = array('limit', 'instrument', 'idlist');
 
-  // Gather harvest migration options.
-  $options = array(
-    // TODO add supported default migrate import options.
-  );
+  // Gather harvest migration options. If parsing the arguments fails just relay
+  // on the parsing callback to oouput an appropriate message and stop.
+  $option_parsed = dkan_harvest_get_options($options, $supported_options);
+  if (!$option_parsed) {
+    return;
+  }
+
+  $sources = array();
 
   if (!isset($source_machine_name)) {
-    $message = t("No source to rollback.");
-    drush_log($message, 'error');
-    return FALSE;
+    return drush_set_error(
+      dt("No source machine_name provided.")
+    );
+  }
+  else {
+    $source = dkan_harvest_get_harvestsource($source_machine_name);
+
+    if (!$source) {
+      return FALSE;
+    }
+
+    $message = t("Running the harvest rollback on %source_machine_name",
+      array('%source_machine_name' => $source_machine_name));
+    drush_log($message, 'notice');
+    $sources[] = $source;
   }
 
-  $source = new HarvestSource($source_machine_name);
-  if (!$source) {
-    $message = t("No source with machine name %source_machine_name found.",
-      array(
-        '%source_machine_name' => $source_machine_name,
-      ));
-    drush_log($message, 'error');
-    return FALSE;
-  }
-
-  $message = t("Running the harvest migration on %source_machine_name",
-    array(
-      '%source_machine_name' => $source_machine_name,
-    ));
-  drush_log($message, 'notice');
-  dkan_harvest_rollback_sources(array($source), $options);
+  dkan_harvest_rollback_sources($sources, $options);
 }
 
 /**
@@ -202,6 +233,7 @@ function dkan_harvest_drush_command_status() {
     'type' => 'Type',
   );
 
+  // Build table array.
   foreach ($harvest_sources as $harvest_source) {
     $rows[] = array(
       'machine name' => $harvest_source->machineName,
@@ -221,11 +253,16 @@ function dkan_harvest_drush_command_status() {
  *        Source machine name to migrate.
  */
 function dkan_harvest_drush_command_deregister($source_machine_name) {
-
   // Gather harvest migration options.
-  $options = array(
-    // TODO add supported default migrate import options.
-  );
+  $options = array();
+  $supported_options = array();
+
+  // Gather harvest migration options. If parsing the arguments fails just relay
+  // on the parsing callback to oouput an appropriate message and stop.
+  $option_parsed = dkan_harvest_get_options($options, $supported_options);
+  if (!$option_parsed) {
+    return;
+  }
 
   if (!isset($source_machine_name)) {
     $message = t("No source to deregister");
@@ -241,4 +278,109 @@ function dkan_harvest_drush_command_deregister($source_machine_name) {
   }
 
   dkan_harvest_deregister_sources(array($harvest_source), $options);
+}
+
+/**
+ * Wrapper for options parsing callbacks.
+ */
+function dkan_harvest_get_options(&$options, $lookup = array()) {
+  foreach ($lookup as $option) {
+    $options = call_user_func('dkan_harvest_get_option_' . $option, $options);
+    if ($options === FALSE) {
+      // Some argument parsing failed. escalate.
+      return drush_set_error(NULL, dt('unsupported or invalid use of the !option option.',
+      array('!option' => $option)));
+    }
+  }
+  return TRUE;
+}
+
+/**
+ * Helper function to parse the 'limit' option.
+ *
+ * This is taken from migrate.drush.inc.
+ */
+function dkan_harvest_get_option_limit($options) {
+  $limit = drush_get_option('limit');
+  if ($limit) {
+    $parts = explode(' ', $limit);
+    $options['limit']['value'] = $parts[0];
+    // Default unit.
+    if (!isset($parts[1])) {
+      $parts[1] = 'items';
+    }
+    $options['limit']['unit'] = $parts[1];
+    // Validation.
+    if (!in_array($options['limit']['unit'],
+      array('seconds', 'second', 'items', 'item'))) {
+      return drush_set_error(NULL, dt("Invalid limit unit '!unit'",
+      array('!unit' => $options['limit']['unit'])));
+    }
+  }
+  return $options;
+}
+
+/**
+ * Helper function to parse the 'instrument' option.
+ *
+ * This is taken from migrate.drush.inc.
+ */
+function dkan_harvest_get_option_instrument($options) {
+  $instrument = drush_get_option('instrument');
+  global $_migrate_track_memory, $_migrate_track_timer;
+  switch ($instrument) {
+    case 'timer':
+      $_migrate_track_timer = TRUE;
+      break;
+
+    case 'memory':
+      $_migrate_track_memory = TRUE;
+      break;
+
+    case 'all':
+      $_migrate_track_timer = TRUE;
+      $_migrate_track_memory = TRUE;
+      break;
+  }
+  return $options;
+}
+
+/**
+ * Helper function to parse the 'skiphash' option.
+ */
+function dkan_harvest_get_option_skiphash($options) {
+  $options['skiphash'] = drush_get_option('skiphash', FALSE);
+  return $options;
+}
+
+/**
+ * Helper function to parse the 'idlist' option.
+ *
+ * This is taken from migrate.drush.inc.
+ */
+function dkan_harvest_get_option_idlist($options) {
+  if ($idlist = drush_get_option('idlist', FALSE)) {
+    $options['idlist'] = $idlist;
+  }
+  return $options;
+}
+
+/**
+ * Return the HarvestSource from machine name.
+ */
+function dkan_harvest_get_harvestsource($source_machine_name) {
+  $source = NULL;
+
+  try {
+    $source = new HarvestSource($source_machine_name);
+  }
+  catch (Exception $exception) {
+    $message = dt("No source with machine name %source_machine_name found.",
+      array(
+        '%source_machine_name' => $source_machine_name,
+      ));
+    return drush_set_error(NULL, $message);
+  }
+
+  return $source;
 }
